--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.data.mongodb.uri=mongodb+srv://JosephNguyenNazareth:su=MI*ko6199@cluster0.e1fljqy.mongodb.net/mage?retryWrites=true&w=majority
+spring.data.mongodb.database=mage
+server.error.include-message=always
+server.port=8082
