--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,38 @@
-# The Docker image that will be used to build your app
-image: mage
-pages:
-  script:
-    - mvn clean install
+image: gitlab/josh
+services:
+  - docker:josh
+
+variables:
+  DOCKER_DRIVER: overlay
+  SPRING_PROFILES_ACTIVE: gitlab-ci
+  USER_GITLAB: JosephNguyenNazareth
+  APP_NAME: mage
+  REPO: mage
+
+stages:
+  - build
+  - test
+  - docker
+
+maven-build:
+  image: maven:3-jdk-8
+  stage: build
+  script: "mvn clean install"
   artifacts:
     paths:
-      # The folder that contains the files to be exposed at the Page URL
-      - public
-  rules:
-    # This ensures that only pushes to the default branch will trigger
-    # a pages deploy
-    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
+      - target/*.jar
+
+maven-test:
+  image: maven:3-jdk-8
+  stage: test
+  script: "mvn test"
+  artifacts:
+    paths:
+      - target/*.jar
+
+docker-build:
+  stage: docker
+  script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker build -t registry.gitlab.com/JosephNguyenNazareth/mage .
+    - docker push registry.gitlab.com/JosephNguyenNazareth/mage
