add pms url info, test for ontology (not use in this version) and build dockerfile

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,17 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!--	Protege api	-->
+		<dependency>
+			<groupId>edu.stanford.protege</groupId>
+			<artifactId>webprotege-backend-api</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>org.semanticweb.hermit</artifactId>
+			<version>1.4.5.519</version>
+		</dependency>
 	</dependencies>
 
 	<build>
