--- a/src/main/resources/pms_config.json
+++ b/src/main/resources/pms_config.json
@@ -108,7 +108,7 @@
         }
     },
     {
-        "pms" : "bonitasoft",
+        "pms" : "bonita",
         "url" : "http://localhost:1662/bonita",
         "user_info" : {
             "method" : "x-www-form-urlencoded",
