--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pmsconnect</groupId>
-	<artifactId>mage</artifactId>
+	<artifactId>pmage</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mage</name>
-	<description>Mage project Spring Boot</description>
+	<name>pmage</name>
+	<description>pMage project Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
