--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.data.mongodb.uri=mongodb+srv://JosephNguyenNazareth:su=MI*ko6199@cluster0
 spring.data.mongodb.database=mage
 server.error.include-message=always
 server.port=8082
+
+appconfig=./src/main/resources/app_config.json
+pmsconfig=./src/main/resources/pms_config.json
