--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.data.mongodb.uri=mongodb://JosephNguyenNazareth:su=MI*ko6199@ac-abw0tkh-s
 spring.data.mongodb.database=mage
 server.error.include-message=always
 server.port=8082
-appconfig=./config/app_config.json
-pmsconfig=./config/pms_config.json
+
+appconfig=./src/main/resources/app_config.json
+pmsconfig=./src/main/resources/pms_config.json
