add function updating pms config

--- a/src/main/resources/pms_config.json
+++ b/src/main/resources/pms_config.json
@@ -1,7 +1,7 @@
 [
     {
         "pms": "core-bape",
-        "url": "localhost:8081/api/process-instance",
+        "url": "http://localhost:8081/api/process-instance",
         "api_info": {
             "verify": {
                 "method" : "GET",
