--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.port=8082
 
 appconfig=./src/main/resources/app_config.json
 pmsconfig=./src/main/resources/pms_config.json
+python=C:/Users/iohkg/miniconda3/envs/dl/python
