--- a/pms_config.json
+++ b/pms_config.json
@@ -1,7 +1,7 @@
 [
     {
         "pms": "core-bape",
-        "url": "localhost:8081/api/process-instance",
+        "url": "http://localhost:8081/api/process-instance",
         "api_info": {
             "verify": {
                 "method" : "GET",
@@ -20,7 +20,7 @@
             },
             "getTask" : {
                 "method" : "GET",
-                "url" : "{url}/{processInstanceId}/get-task",
+                "url" : "{url}/{processInstanceId}/get-tasks",
                 "param" : []
             },
             "validateTask" : {
@@ -37,6 +37,16 @@
                 "method" : "PUT",
                 "url" : "{url}/{processInstanceId}/end-task",
                 "param" : ["taskId"]
+            },
+            "getArtifact" : {
+                "method": "GET",
+                "url": "{url}/{processInstanceId}/data-object",
+                "param": []
+            },
+            "log" : {
+                "method": "GET",
+                "url": "{url}/log",
+                "param": []
             }
         }
     },
@@ -114,32 +124,138 @@
     },
     {
         "pms" : "bonita",
-        "url" : "http://localhost:1662/bonita",
-        "user_info" : {
-            "method" : "x-www-form-urlencoded",
-            "username" : "walter.bates",
-            "password" : "walter",
-            "redirect" : "false"
-        },
+        "url" : "http://localhost:8080/bonita",
         "api_info": {
+            "login" : {
+                "method" : "POST",
+                "url" : "{url}/loginservice",
+                "header" : {
+                    "fixed": {
+                        "Content-type": "application/x-www-form-urlencoded"
+                    }
+                },
+                "body" : ["username", "password"],
+                "return" : {
+                    "JSESSIONID":  {
+                        "header": "Set-Cookie"
+                    },
+                    "X-Bonita-API-Token":  {
+                        "header": "Set-Cookie"
+                    }
+                }
+            },
             "verify": {
                 "method" : "GET",
                 "url" : "{url}/API/bpm/case/{processInstanceId}",
+                "cookie": {
+                    "dynamic": {
+                        "JSESSIONID": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "header": {
+                    "dynamic": {
+                        "X-Bonita-API-Token": {
+                            "login" : "return"
+                        }
+                    }
+                },
                 "param" : []
             },
             "createProcess": {
                 "method" : "POST",
                 "url" : "{url}/API/bpm/process/{processId}/instantiation",
+                "cookie": {
+                    "dynamic": {
+                        "JSESSIONID": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "header": {
+                    "dynamic": {
+                        "X-Bonita-API-Token": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "param" : []
+            },
+            "getCase" : {
+                "method" : "GET",
+                "url" : "{url}/API/bpm/case?s={processDef}",
+                "cookie": {
+                    "dynamic": {
+                        "JSESSIONID": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "header": {
+                    "dynamic": {
+                        "X-Bonita-API-Token": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "param" : []
+            },
+            "getTask" : {
+                "method" : "GET",
+                "url" : "{url}/API/bpm/task?f=caseId={processInstanceId}",
+                "cookie": {
+                    "dynamic": {
+                        "JSESSIONID": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "header": {
+                    "dynamic": {
+                        "X-Bonita-API-Token": {
+                            "login" : "return"
+                        }
+                    }
+                },
                 "param" : []
             },
             "validateTask" : {
                 "method" : "GET",
                 "url" : "{url}/API/bpm/task/{taskInstanceId}",
+                "cookie": {
+                    "dynamic": {
+                        "JSESSIONID": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "header": {
+                    "dynamic": {
+                        "X-Bonita-API-Token": {
+                            "login" : "return"
+                        }
+                    }
+                },
                 "param" : []
             },
             "endTask" : {
                 "method" : "PUT",
-                "url" : "{url}API/bpm/task/{taskInstanceId}",
+                "url" : "{url}/API/bpm/task/{taskInstanceId}",
+                "cookie": {
+                    "dynamic": {
+                        "JSESSIONID": {
+                            "login" : "return"
+                        }
+                    }
+                },
+                "header": {
+                    "dynamic": {
+                        "X-Bonita-API-Token": {
+                            "login" : "return"
+                        }
+                    }
+                },
                 "param" : [],
                 "body" : [
                     {"state" :  "completed"}
