--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.data.mongodb.uri=mongodb+srv://JosephNguyenNazareth:su=MI*ko6199@cluster0.e1fljqy.mongodb.net/mage?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb://JosephNguyenNazareth:su=MI*ko6199@ac-abw0tkh-shard-00-00.e1fljqy.mongodb.net:27017,ac-abw0tkh-shard-00-01.e1fljqy.mongodb.net:27017,ac-abw0tkh-shard-00-02.e1fljqy.mongodb.net:27017/?ssl=true&replicaSet=atlas-ika5en-shard-0&authSource=admin&retryWrites=true&w=majority
 spring.data.mongodb.database=mage
 server.error.include-message=always
-server.port=8082
+server.port=8092
 
 appconfig=./src/main/resources/app_config.json
 pmsconfig=./src/main/resources/pms_config.json
